<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.github.pangju666</groupId>
		<artifactId>pangju-dependencies</artifactId>
		<version>1.1.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>io.github.pangju666.commons</groupId>
	<artifactId>commons-parent</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>pangju-commons</name>
	<description>公共工具类库父级</description>
	<url>https://github.com/pangju666/java-pangju-commons</url>

	<modules>
		<module>commons-crypto</module>
		<module>commons-compress</module>
		<module>commons-geo</module>
		<module>commons-image</module>
		<module>commons-imageio</module>
		<module>commons-io</module>
		<module>commons-lang</module>
		<module>commons-pdf</module>
		<module>commons-poi</module>
		<module>commons-validation</module>
		<module>commons-bom</module>
		<module>commons-all</module>
	</modules>

	<properties>
		<java.version>11</java.version>
		<skipTests>true</skipTests>
	</properties>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>pangju666</id>
			<name>胖橘</name>
			<email>nullptr255@outlook.com</email>
			<url>https://github.com/pangju666</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git@github.com:pangju666/java-pangju-commons.git</connection>
		<developerConnection>scm:git@github.com:pangju666/java-pangju-commons.git</developerConnection>
		<url>https://github.com/pangju666/java-pangju-commons</url>
	</scm>

	<build>
		<testSourceDirectory>src/test/groovy</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<!--<configuration>
					<skip>true</skip>
				</configuration>-->
			</plugin>
			<plugin>
				<groupId>org.codehaus.gmavenplus</groupId>
				<artifactId>gmavenplus-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>compileTests</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus</id>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
</project>
